--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -4,9 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <title>Rock Paper Scissor</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     <h1>Rock paper scissors</h1>
+    <button class="player-btn" id="rock-btn" value="rock">Rock</button>
+    <button class="player-btn" id="paper-btn" value="paper">Paper</button>
+    <button class="player-btn" id="scissors-btn" value="scissors">Scissors</button>
 </body>
 </html>
