--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -3,13 +3,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
     <h1>Rock paper scissors</h1>
+    <div class="score" id="running-score"><h3></h3></div>
     <button class="player-btn" id="rock-btn" value="rock">Rock</button>
     <button class="player-btn" id="paper-btn" value="paper">Paper</button>
     <button class="player-btn" id="scissors-btn" value="scissors">Scissors</button>
+    <div class="score" id="result"><h2></h2></div>
+    <div class="finalScore" id="finalResult"></div>
+    <button class="play" id="again">Play again</button>
+    <script src="script.js"></script>
 </body>
 </html>
