Added createGrid function

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -10,9 +10,9 @@
     <header id="header">
         <div id="title">Etch a Sketch</div>
     </header>
-    <main class="container-list" id="container">
-
-    </main>    
+    <table id="container">
+        
+    </table>
 
     <script src="script.js"></script>
 </body>
