updates to the ui

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -10,9 +10,12 @@
     <header id="header">
         <div id="title">Etch a Sketch</div>
     </header>
-    <table id="container">
-        
-    </table>
+    <main id="main">
+        <button id="reset">Reset</button>
+        <table cellspacing="0" id="container">
+        </table>
+    </main>
+
 
     <script src="script.js"></script>
 </body>
