small html and css changes

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -12,12 +12,11 @@
     </header>
     <main id="main">
         <input id="color-selector" type="color" value="#000000" />
-        <div id="custom-grid-values">
-            <input id="custom-row" type="number" min='2' max="100" placeholder="Insert row number">
-            <input id="custom-col" type="number" min='2' max="100" placeholder="Insert column number">
-            <input id="submit" type="submit">
-        </div>
-        <button id="reset-btn">Reset</button>
+
+        <button id="grid-size" type="submit">Change grid size</button>
+
+        <button id="reset-board">Reset board</button>
+        <button id="reset-color">Reset color</button>
         <table cellspacing="0" id="container">
         </table>
     </main>
