Added eraser function

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -12,13 +12,11 @@
     </header>
     <main id="main">
         <input id="color-selector" type="color" value="#000000" />
-
         <button id="grid-size" type="submit">Change grid size</button>
-
         <button id="reset-board">Reset board</button>
         <button id="reset-color">Reset color</button>
-        <table cellspacing="0" id="container">
-        </table>
+        <button id="eraser">Eraser</button>
+        <table cellspacing="0" id="container"></table>
     </main>
 
     <script src="script.js"></script>
