--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -16,6 +16,9 @@
         <button id="reset-board">Reset board</button>
         <button id="reset-color">Reset color</button>
         <button id="eraser">Eraser</button>
+        <button id="color-mode">Color mode</button>
+        <button id="rainbow-mode">Rainbow mode</button>
+        <button id="stop-rainbow-mode">Stop Rainbow mode</button>
         <table cellspacing="0" id="container"></table>
     </main>
 
