--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Etch a Sketch</title>
+    <title>Etch a Sketch1</title>
 </head>
 <body>
     <header id="header">
