added css to the project

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -11,13 +11,15 @@
         <div id="title">Etch a Sketch</div>
     </header>
     <main id="main">
-        <input id="color-selector" type="color" value="#000000" />
-        <button id="grid-size" type="submit">Change grid size</button>
-        <button id="reset-board">Reset board</button>
-        <button id="reset-color">Reset color</button>
-        <button id="eraser">Eraser</button>
-        <button id="color-mode">Color mode</button>
-        <button id="rainbow-mode">Rainbow mode</button>
+        <div class="options">
+            <input id="color-selector" type="color" value="#000000" />
+            <button id="grid-size" type="submit">Change grid size</button>
+            <button id="reset-board">Reset board</button>
+            <button id="reset-color">Reset color</button>
+            <button id="eraser">Eraser</button>
+            <button id="color-mode">Color mode</button>
+            <button id="rainbow-mode">Rainbow mode</button>
+        </div>
         <table cellspacing="0" id="container"></table>
     </main>
 
