--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,31 +9,33 @@
 </head>
 <body>
 
-    <div class="display">
-        <h1>1000000</h1>
-    </div>
-    <div class="digits">
-        <button id="zero">0</button>
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-    </div>
-    <div class="operations">
-        <button id="add">+</button>
-        <button id="substract">-</button>
-        <button id="multiply">x</button>
-        <button id="divide">÷</button>
-        <button id="equal">=</button>
-    </div>
-    <div class="functions">
-        <button id="clear">CLEAR</button>
-    </div>
+    <main class="container">
+
+        <h1 id="display">0</h1>
+
+        <div class="digits">
+            <button id="zero" value="0">0</button>
+            <button id="one" value="1">1</button>
+            <button id="two" value="2">2</button>
+            <button id="three" value="3">3</button>
+            <button id="four" value="4">4</button>
+            <button id="five" value="5">5</button>
+            <button id="six" value="6">6</button>
+            <button id="seven" value="7">7</button>
+            <button id="eight" value="8">8</button>
+            <button id="nine" value="9">9</button>
+        </div>
+
+        <div class="operations">
+            <button id="add" value="+">+</button>
+            <button id="substract" value="-">-</button>
+            <button id="multiply" value="*">x</button>
+            <button id="divide" value="/">÷</button>
+            <button id="equal" value="=">=</button>
+            <button id="clear" value="clear">CLEAR</button>
+        </div>
+
+    </main>
 
 </body>
 </html>
