--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,10 +8,12 @@
     <title>Calculator</title>
 </head>
 <body>
-
     <main class="container">
 
-        <h1 id="display">0</h1>
+        <div class="displays">
+            <p id="display-total">0</p>
+            <p id="display-current">0</p>
+        </div>
 
         <div class="digits">
             <button id="zero" value="0">0</button>
@@ -36,6 +38,5 @@
         </div>
 
     </main>
-
 </body>
 </html>
