--- a/calculator/index.html
+++ b/calculator/index.html
@@ -30,7 +30,7 @@
 
         <div class="operations">
             <button id="add" value="+">+</button>
-            <button id="substract" value="-">-</button>
+            <button id="subtract" value="-">-</button>
             <button id="multiply" value="*">x</button>
             <button id="divide" value="/">÷</button>
             <button id="equal" value="=">=</button>
