--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,8 +11,8 @@
     <main class="container">
 
         <div class="displays">
-            <p id="display-total">0</p>
-            <p id="display-current">0</p>
+            <p id="display-total"></p>
+            <p id="display-current"></p>
         </div>
 
         <div class="digits">
