--- a/calculator/index.html
+++ b/calculator/index.html
@@ -32,7 +32,7 @@
             <button id="add" value="+">+</button>
             <button id="subtract" value="-">-</button>
             <button id="multiply" value="*">x</button>
-            <button id="divide" value="/">÷</button>
+            <button id="divide" value="/">/</button>
             <button id="equal" value="=">=</button>
             <button id="clear" value="clear">CLEAR</button>
         </div>
