--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,15 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
     <main class="container">
 
         <div class="displays">
-            <p id="display-current"></p>
             <p id="display-total"></p>
+            <p id="display-current"></p>
         </div>
 
         <div class="digits">
