Added clearCalc(), handling decimal numbers, scenario when the user presses '=' wihtout having any values, and finally handle divide by 0

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -35,6 +35,7 @@
             <button id="divide" value="/">/</button>
             <button id="equal" value="=">=</button>
             <button id="clear" value="clear">CLEAR</button>
+            <button id="print" value="print">PRINT</button>
         </div>
 
     </main>
