--- a/calculator/index.html
+++ b/calculator/index.html
@@ -34,7 +34,9 @@
             <button id="multiply" value="*">x</button>
             <button id="divide" value="/">/</button>
             <button id="equal" value="=">=</button>
+            <button id="dot" value=".">.</button>
             <button id="clear" value="clear">CLEAR</button>
+            <button id="delete" value="delete">DELETE</button>
             <button id="print" value="print">PRINT</button>
         </div>
 
