Not perfect but it is finished

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -31,7 +31,7 @@
         <div class="operations">
             <button id="add" value="+">+</button>
             <button id="subtract" value="-">-</button>
-            <button id="multiply" value="*">x</button>
+            <button id="multiply" value="*">*</button>
             <button id="divide" value="/">/</button>
             <button id="equal" value="=">=</button>
             <button id="dot" value=".">.</button>
