--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,28 +16,28 @@
         </div>
 
         <div class="digits">
-            <button id="zero" value="0">0</button>
-            <button id="one" value="1">1</button>
-            <button id="two" value="2">2</button>
-            <button id="three" value="3">3</button>
-            <button id="four" value="4">4</button>
-            <button id="five" value="5">5</button>
-            <button id="six" value="6">6</button>
-            <button id="seven" value="7">7</button>
-            <button id="eight" value="8">8</button>
-            <button id="nine" value="9">9</button>
+            <button class='digit' id="zero" value="0">0</button>
+            <button class='digit' id="one" value="1">1</button>
+            <button class='digit' id="two" value="2">2</button>
+            <button class='digit' id="three" value="3">3</button>
+            <button class='digit' id="four" value="4">4</button>
+            <button class='digit' id="five" value="5">5</button>
+            <button class='digit' id="six" value="6">6</button>
+            <button class='digit' id="seven" value="7">7</button>
+            <button class='digit' id="eight" value="8">8</button>
+            <button class='digit' id="nine" value="9">9</button>
         </div>
 
         <div class="operations">
-            <button id="add" value="+">+</button>
-            <button id="subtract" value="-">-</button>
-            <button id="multiply" value="*">*</button>
-            <button id="divide" value="/">/</button>
-            <button id="equal" value="=">=</button>
-            <button id="dot" value=".">.</button>
-            <button id="clear" value="clear">CLEAR</button>
-            <button id="delete" value="delete">DELETE</button>
-            <button id="print" value="print">PRINT</button>
+            <button class="operation" id="add" value="+">+</button>
+            <button class="operation" id="subtract" value="-">-</button>
+            <button class="operation" id="multiply" value="*">*</button>
+            <button class="operation" id="divide" value="/">/</button>
+            <button class="operation" id="equal" value="=">=</button>
+            <button class="operation" id="dot" value=".">.</button>
+            <button class="operation" id="clear" value="clear">CLEAR</button>
+            <button class="operation" id="delete" value="delete">DELETE</button>
+            <!-- <button id="print" value="print">print values</button> -->
         </div>
 
     </main>
