Changed delete to Del and clear to C

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -35,8 +35,8 @@
             <button class="operation" id="divide" value="/">/</button>
             <button class="operation" id="equal" value="=">=</button>
             <button class="operation" id="dot" value=".">.</button>
-            <button class="operation" id="clear" value="clear">CLEAR</button>
-            <button class="operation" id="delete" value="delete">DELETE</button>
+            <button class="operation" id="clear" value="clear">C</button>
+            <button class="operation" id="delete" value="delete">DEL</button>
             <!-- <button id="print" value="print">print values</button> -->
         </div>
 
