--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -14,6 +16,5 @@
     <div class="score" id="result"><h2></h2></div>
     <div class="finalScore" id="finalResult"></div>
     <button class="play" id="again">Play again</button>
-    <script src="script.js"></script>
 </body>
 </html>
