added classList to make icons bigger when selected by either user or pc

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -27,9 +27,9 @@
             </div>
             <div class="computer">
                 <h2>Computer score: 0</h2>
-                <img src="rock.svg" width="50px" height="auto">
-                <img src="paper.svg" width="50px" height="auto">
-                <img src="scissors.svg" width="50px" height="auto">
+                <img src="rock.svg" width="50px" id="cpu-rock">
+                <img src="paper.svg" width="50px" id="cpu-paper">
+                <img src="scissors.svg" width="50px" id="cpu-scissors">
             </div>
         </div>
         <h3></h3>
