--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Etch a Sketch</title>
 </head>
 <body>
@@ -22,7 +23,5 @@
         </div>
         <table cellspacing="0" id="container"></table>
     </main>
-
-    <script src="script.js"></script>
 </body>
 </html>
