--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -8,18 +8,18 @@
     <title>Etch a Sketch</title>
 </head>
 <body>
-    <header id="header">
-        <div id="title">Etch a Sketch</div>
+    <header class="header">
+        <div class="title">Etch a Sketch</div>
     </header>
-    <main id="main">
+    <main class="main">
         <div class="options">
             <input id="color-selector" type="color" value="#000000" />
-            <button id="grid-size" type="submit">Change grid size</button>
+            <button id="rainbow-mode">Rainbow mode</button>
+            <button id="color-mode">Color mode</button>
+            <button id="eraser">Eraser</button>
             <button id="reset-board">Reset board</button>
             <button id="reset-color">Reset color</button>
-            <button id="eraser">Eraser</button>
-            <button id="color-mode">Color mode</button>
-            <button id="rainbow-mode">Rainbow mode</button>
+            <button id="grid-size" type="submit">Change grid size</button>
         </div>
         <table cellspacing="0" id="container"></table>
     </main>
