--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,31 +15,39 @@
             <p id="display-current"></p>
         </div>
 
-        <div class="digits">
-            <button class='digit' id="zero" value="0">0</button>
-            <button class='digit' id="one" value="1">1</button>
-            <button class='digit' id="two" value="2">2</button>
-            <button class='digit' id="three" value="3">3</button>
-            <button class='digit' id="four" value="4">4</button>
-            <button class='digit' id="five" value="5">5</button>
-            <button class='digit' id="six" value="6">6</button>
+        <div class="upper">
+            <button class="operation" id="clear" value="clear">C</button>
+            <button class="operation" id="divide" value="/">/</button>
+            <button class="operation" id="multiply" value="*">*</button>
+            <button class="operation" id="delete" value="delete">DEL</button>
+        </div>
+
+        <div class="top-digits">
             <button class='digit' id="seven" value="7">7</button>
             <button class='digit' id="eight" value="8">8</button>
             <button class='digit' id="nine" value="9">9</button>
-        </div>
-
-        <div class="operations">
-            <button class="operation" id="add" value="+">+</button>
             <button class="operation" id="subtract" value="-">-</button>
-            <button class="operation" id="multiply" value="*">*</button>
-            <button class="operation" id="divide" value="/">/</button>
-            <button class="operation" id="equal" value="=">=</button>
-            <button class="operation" id="dot" value=".">.</button>
-            <button class="operation" id="clear" value="clear">C</button>
-            <button class="operation" id="delete" value="delete">DEL</button>
-            <!-- <button id="print" value="print">print values</button> -->
         </div>
 
+        <div class="mid-digits">
+            <button class='digit' id="four" value="4">4</button>
+            <button class='digit' id="five" value="5">5</button>
+            <button class='digit' id="six" value="6">6</button>
+            <button class="operation" id="add" value="+">+</button>
+        </div>
+
+        <div class="bottom-digits">
+            <button class='digit' id="one" value="1">1</button>
+            <button class='digit' id="two" value="2">2</button>
+            <button class='digit' id="three" value="3">3</button>
+            <button class="operation" id="dot" value=".">.</button>
+        </div>
+
+        <div class="low">
+            <button class="+/-" id="plusMinus" value="+/-">+/-</button>
+            <button class='digit' id="zero" value="0">0</button>
+            <button class="operation" id="equal" value="=">=</button>
+        </div>
     </main>
 </body>
 </html>
